--- a/templates/main_app/toolbar.html
+++ b/templates/main_app/toolbar.html
@@ -62,18 +62,16 @@
     {% endif %}
         {% if user.is_authenticated %}
         <li class="nav-item dropdown no-arrow">
-            <a class="nav-link dropdown-toggle" href="{% url 'accounts:logout' %}" id="logout" role="button"
-                aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Logout</span>
-            </a>
-        </li>
-        <li class="nav-item dropdown no-arrow">
-            <a class="nav-link dropdown-toggle" href="#" id="logout" role="button"
-                aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">
-                    Welcome: {{user.username}}
-                </span>
-            </a>
+            <div class="dropdown show">
+              <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Welcome: {{user.username}}
+              </a>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <a class="dropdown-item" href="{% url 'accounts:profile' %}">Profile</a>
+                  <a class="dropdown-item" href="#">Change Password</a>
+                <a class="dropdown-item" href="{% url 'accounts:logout' %}">logout</a>
+              </div>
+            </div>
         </li>
         {% else %}
         <div class="topbar-divider d-none d-sm-block"></div>
