--- a/templates/global/base.html
+++ b/templates/global/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load i18n %}
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -33,9 +34,9 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'main_app:index' %}">
+                <div class="sidebar-brand-icon">
+                    <i class="fa fa-building"></i>
                 </div>
                 <div class="sidebar-brand-text mx-3">Real Estate</div>
             </a>
@@ -48,19 +49,16 @@
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                Interface
+                Search ...
             </div>
             <div>
-                <form
-                    class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                    <div class="input-group">
-                        <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
-                            aria-label="Search" aria-describedby="basic-addon2">
-                        <div class="input-group-append">
-                            <button class="btn btn-primary" type="button">
-                                <i class="fas fa-search fa-sm"></i>
-                            </button>
-                        </div>
+                <form method="get" action="{% url 'main_app:index' %}" novalidate>
+                        {{ search_form|crispy }}
+                    <div class="input-group-append">
+                        <button class="btn btn-primary" type="submit">
+{#                            <i class="fas fa-search fa-sm"></i>#}
+                                Search ...
+                        </button>
                     </div>
                 </form>
             </div>
