--- a/templates/global/base.html
+++ b/templates/global/base.html
@@ -244,6 +244,7 @@
 
     <!-- Custom scripts for all pages-->
     <script src="{% static 'js/sb-admin-2.min.js' %}"></script>
+    <script src="{% static 'js/custom.js' %}"></script>
 
 </body>
 
