--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,22 @@
 
 <!-- Javascript Files -->
 
-
+{% if LANGUAGE_CODE == 'ar' %}
+<script src="{% static 'rtl/js/jquery.min.js' %}"></script>
+<script src="{% static 'rtl/js/popper.min.js' %}"></script>
+<script src="{% static 'rtl/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'rtl/js/bootstrap-select.min.js' %}"></script>
+<script src="{% static 'rtl/js/jquery.fancybox.min.js' %}"></script>
+<script src="{% static 'rtl/js/owl.js' %}"></script>
+<script src="{% static 'rtl/js/range/tmpl.js' %}"></script>
+<script src="{% static 'rtl/js/range/jquery.dependClass.js' %}"></script>
+<script src="{% static 'rtl/js/range/draggable.js' %}"></script>
+<script src="{% static 'rtl/js/range/jquery.slider.js' %}"></script>
+<script src="{% static 'rtl/js/wow.js' %}"></script>
+<script src="{% static 'rtl/js/mixitup.min.js' %}"></script>
+<script src="{% static 'rtl/js/paraxify.js' %}"></script>
+<script src="{% static 'rtl/js/custom.js' %}"></script>
+{% else %}
 <script src="{% static 'js/jquery.min.js' %}"></script>
 <script src="{% static 'js/greensock.js' %}"></script>
 <script src="{% static 'js/layerslider.transitions.js' %}"></script>
@@ -90,6 +105,8 @@
 <script src="{% static 'js/mixitup.min.js' %}"></script>
 <script src="{% static 'js/paraxify.js' %}"></script>
 <script src="{% static 'js/custom.js' %}"></script>
+{% endif %}
+
 {% if LANGUAGE_CODE == 'ar' %}
     {# TODO: Add RTL JS files#}
 {% endif %}
