--- a/templates/main/projects.html
+++ b/templates/main/projects.html
@@ -21,24 +21,6 @@
 
         </div>
     </div>
-    {#<div class="full-row pt-0">#}
-    {#    <div class="container">#}
-    {#        <div class="row">#}
-    {#            <div class="col">#}
-    {#                <div class="woo-filter-bar p-3 d-flex flex-wrap justify-content-between">#}
-    {#                    <div class="d-flex flex-wrap">#}
-    {#                        <div class="btn push-nav-toggle"><i class="fas fa-filter"></i></div>#}
-    {#                        <form class="woocommerce-ordering" method="get">#}
-    {#                            {% csrf_token %}#}
-    {#                            {{ search_form|crispy }}#}
-    {#                            <button type="submit" class="btn btn-border-dark">{% trans "Search" %}</button>#}
-    {#                        </form>#}
-    {#                    </div>#}
-    {#                </div>#}
-    {#            </div>#}
-    {#        </div>#}
-    {#    </div>#}
-    {#</div>#}
     <!--============== Page title End ==============-->
 {% endblock page_header %}
 
@@ -107,26 +89,22 @@
                                             <span class="sale bg-secondary text-white">{% trans "For Rent" %}</span>
                                             <span class="featured bg-primary text-white">{% trans "Featured" %}</span>
                                         </div>
-                                        <a href="#"><img class="w-100" src="{{ project.get_first_image_or_default }}"
-                                                         alt=""></a>
-                                        {#                    <ul class="position-absolute quick-meta">#}
-                                        {#                        <li><a href="#"><i class="flaticon-transfer flat-mini"></i></a></li>#}
-                                        {#                        <li><a href="#"><i class="flaticon-like-1 flat-mini"></i></a></li>#}
-                                        {#                        <li><a href="#"><i class="flaticon-share flat-mini"></i></a></li>#}
-                                        {#                        <li><a href="#"><i class="flaticon-printer flat-mini"></i></a></li>#}
-                                        {#                    </ul>#}
-                                    </div>
+                                        <a href="#"><img class="w-100" src="{{ project.get_first_image_or_default }}" alt=""></a>
                                 </div>
                                 <div class="col">
                                     <div class="property_text transation py-3 pe-3">
                                         <span class="d-inline-block text-primary">{{ project.get_type_display }}</span>
-                                        <h5 class="modal-title mb-1" id="staticBackdropLabel"><a href="#"
-                                                                                                 class="text-secondary hover-text-primary transation">{{ project.name }}</a>
+                                        <h5 class="modal-title mb-1" id="staticBackdropLabel">
+                                            <a href="#" class="text-secondary hover-text-primary transation">{{ project.name }}</a>
                                         </h5>
-                                        <span class="mt-1 mb-3 d-block font-fifteen"><i
-                                                class="fas fa-map-marker-alt text-primary"></i> {{ project.location }}</span>
-                                        <a href="#"
-                                           class="d-block text-light hover-text-primary font-small mb-2">{% trans "( 100 People Recommended )" %}</a>
+                                        {% if LANGUAGE_CODE == 'ar' %}
+                                            <span class="my-3 d-block dir-rtl">
+                                                <i class="fas fa-map-marker-alt text-primary ms-1"></i>  {{ project.location }}</span>
+                                        {% else %}
+                                            <span class="my-3 d-block">
+                                                <i class="fas fa-map-marker-alt text-primary"></i> {{ project.location }}</span>
+                                        {% endif %}
+                                        <a href="#" class="d-block text-light hover-text-primary font-small mb-2">{% trans "( 100 People Recommended )" %}</a>
                                         <div class="d-flex">
                                             {#                        <span class="text-secondary font-large">$5600 - $8300/<small>mo</small></span>#}
                                             {#                        <span class="text-white font-mini px-2 rounded product-status ms-5 my-1 bg-primary"><i class="fas fa-check"></i> {% trans "Available" %}</span>#}
